--- a/index.html
+++ b/index.html
@@ -76,6 +76,38 @@
     <div class="grid big-grid-middle large-grid-large isplit-content">
     <h3 align="center" > <a href="/q/patches/index.html">PRODUCT</a></h3>
 	 <div class="big-x12 grid discovers">
+      <a class="big-x3 flex flex-column" href="/q/37.html" title="Cute little tiger embroidery patch,2024-07-07 14:48:59">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/u/upload/other/20240707/1720335273197985.webp" alt="Cute little tiger embroidery patch,2024-07-07 14:48:59" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+		<strong class="weight-small">S/N: A37 <span class="text-danger">&#36;</span>:29.99</strong>
+        <p class="flex-grow">Cute little tiger embroidery p···</p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/36.html" title="Daisy embroidered fabric patch cute self-adhesive sticker DIY bag decoration clothing patch patch patch,2024-07-07 12:18:25">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/u/upload/other/20240707/1720334898412630.webp" alt="Daisy embroidered fabric patch cute self-adhesive sticker DIY bag decoration clothing patch patch patch,2024-07-07 12:18:25" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+		<strong class="weight-small">S/N: A36 <span class="text-danger">&#36;</span>:9.99</strong>
+        <p class="flex-grow">Daisy embroidered fabric patch···</p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/35.html" title="Plush cartoon teddy bear cloth sticker,2024-07-07 11:36:51">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/u/upload/other/20240707/1720323888225453.webp" alt="Plush cartoon teddy bear cloth sticker,2024-07-07 11:36:51" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+		<strong class="weight-small">S/N: A35 <span class="text-danger">&#36;</span>:29.99</strong>
+        <p class="flex-grow">Plush cartoon teddy bear cloth···</p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/34.html" title="Ice cream cake embroidered cloth patch,2024-07-07 09:31:22">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/u/upload/other/20240707/1720322934325110.webp" alt="Ice cream cake embroidered cloth patch,2024-07-07 09:31:22" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+		<strong class="weight-small">S/N: A34 <span class="text-danger">&#36;</span>:29.99</strong>
+        <p class="flex-grow">Ice cream cake embroidered clo···</p>
+      </a>
       <a class="big-x3 flex flex-column" href="/q/33.html" title="Cartoon animal embroidery,2024-07-06 17:29:47">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240706/1720262794598324.webp" alt="Cartoon animal embroidery,2024-07-06 17:29:47" class="img-auto scale" /></figure>
@@ -113,7 +145,7 @@
           <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240706/1720248862555502.webp" alt="Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch,2024-07-06 14:32:13" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-		<strong class="weight-small">S/N: A29 <span class="text-danger">&#36;</span>:19.99</strong>
+		<strong class="weight-small">S/N: A29 <span class="text-danger">&#36;</span>:29.99</strong>
         <p class="flex-grow">Cartoon Planet Astronaut Embro···</p>
       </a>
       <a class="big-x3 flex flex-column" href="/q/28.html" title="Cartoon Rabbit Astronaut,2024-07-06 09:42:46">
@@ -129,7 +161,7 @@
           <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240706/1720226337562267.webp" alt="Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers,2024-07-06 08:35:35" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-		<strong class="weight-small">S/N: A27 <span class="text-danger">&#36;</span>:19.99</strong>
+		<strong class="weight-small">S/N: A27 <span class="text-danger">&#36;</span>:29.99</strong>
         <p class="flex-grow">Cartoon animal embroidery stic···</p>
       </a>
       <a class="big-x3 flex flex-column" href="/q/26.html" title="New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch,2024-07-05 19:20:43">
@@ -145,7 +177,7 @@
           <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240705/1720173688785484.webp" alt="Cute cartoon puppy embroidered fabric patch for down jacket,2024-07-05 17:55:53" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-		<strong class="weight-small">S/N: A25 <span class="text-danger">&#36;</span>:29.99</strong>
+		<strong class="weight-small">S/N: A25 <span class="text-danger">&#36;</span>:39.99</strong>
         <p class="flex-grow">Cute cartoon puppy embroidered···</p>
       </a>
       <a class="big-x3 flex flex-column" href="/q/24.html" title="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers,2024-07-01 17:53:32">
@@ -204,38 +236,6 @@
 		<strong class="weight-small">S/N: A17 <span class="text-danger">&#36;</span>:12.99</strong>
         <p class="flex-grow">Embroidered fabric featuring a···</p>
       </a>
-      <a class="big-x3 flex flex-column" href="/q/16.html" title="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set,2024-07-01 08:43:13">
-        <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719794556332881.webp" alt="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set,2024-07-01 08:43:13" class="img-auto scale" /></figure>
-          <div class="effect-content"><i class="icon-add text-main"></i></div>
-        </div>
-		<strong class="weight-small">S/N: A16 <span class="text-danger">&#36;</span>:12.99</strong>
-        <p class="flex-grow">Embroidered lace cover, floral···</p>
-      </a>
-      <a class="big-x3 flex flex-column" href="/q/15.html" title="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2024-06-30 08:38:13">
-        <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719794420979065.webp" alt="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2024-06-30 08:38:13" class="img-auto scale" /></figure>
-          <div class="effect-content"><i class="icon-add text-main"></i></div>
-        </div>
-		<strong class="weight-small">S/N: A15 <span class="text-danger">&#36;</span>:12.99</strong>
-        <p class="flex-grow">Embroidered water-soluble lace···</p>
-      </a>
-      <a class="big-x3 flex flex-column" href="/q/14.html" title="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder,2024-07-01 11:47:46">
-        <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719805636338260.webp" alt="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder,2024-07-01 11:47:46" class="img-auto scale" /></figure>
-          <div class="effect-content"><i class="icon-add text-main"></i></div>
-        </div>
-		<strong class="weight-small">S/N: A14 <span class="text-danger">&#36;</span>:29.99</strong>
-        <p class="flex-grow">Original horse face skirt, org···</p>
-      </a>
-      <a class="big-x3 flex flex-column" href="/q/13.html" title="Embroidery flower bud lace flower applique,2024-06-10 21:33:15">
-        <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240630/1719760090198490.webp" alt="Embroidery flower bud lace flower applique,2024-06-10 21:33:15" class="img-auto scale" /></figure>
-          <div class="effect-content"><i class="icon-add text-main"></i></div>
-        </div>
-		<strong class="weight-small">S/N: A13 <span class="text-danger">&#36;</span>:13.99</strong>
-        <p class="flex-grow">Embroidery flower bud lace flo···</p>
-      </a>
     </div>
   </div>
  
@@ -243,6 +243,10 @@
 <div class="layout grid-large isplit scrollto">
 <h3 align="center">New </h3>
   <div class="grid documents">
+    <a class="big-x4" href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34">
+      <strong>Privacy Policy</strong>
+      <p>Privacy PolicyThis privacy policy covers zalalaa.com and its associa··· <sup>2024-07-07</sup><br />Read More</p>
+    </a>
   </div>
 </div>
 <div class="layout grid-large isplit scrollto">
@@ -252,7 +256,7 @@
   </div>
 </div>
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
- <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p> 
+ <p class="size-small text-gray flex-grow">Copyright &copy; 2024 Zalalaa.Com <a href="/q/contact/index.html">Contact</a>  <a href="/q/38.html">Privacy Policy</a></p> 
 </div>
 </body>
 </html>
