--- a/q/11.html
+++ b/q/11.html
@@ -69,8 +69,8 @@
     <div class="big-x8">
 	<h3 class="margin-bottom weight" align="center">Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace<sup class="badge">$:9.99</sup></h3>
         <time>2024-06-10</time>
-		<p>S/N: A11</p> 
-		<p><a class="padding block" href="https://www.paypal.com/ncp/payment/KED78AEWR8ZVA" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace" /> Buy Now <span class="text-danger">&#36;</span>:9.99</sup></a><img src="https://c.zalalaa.com/q/a.webp" alt="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace"/></p>
+	<div class="grid">S/N: A11 <a class="padding block" href="https://www.paypal.com/ncp/payment/KED78AEWR8ZVA" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace" /> Buy Now <span class="text-danger">&#36;</span>:9.99</sup></a>
+    </div>
   <p>Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace</p><p>size: 25cm * 12cm&nbsp;</p><p>gum : None, sewing is required&nbsp;</p><p>color : This white ，multi-colored</p><p>materail : polyester yarn</p><div>workmanship ：water-soluble embroidery</div><p><br/></p>
   </div> 
   </div>
@@ -139,7 +139,7 @@
       </div>
     </div>
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
- <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p> 
+ <p class="size-small text-gray flex-grow">Copyright &copy; 2024 Zalalaa.Com <a href="/q/contact/index.html">Contact</a>  <a href="/q/38.html">Privacy Policy</a></p> 
 </div>
 </body>
 </html>
