--- a/q/13.html
+++ b/q/13.html
@@ -69,8 +69,8 @@
     <div class="big-x8">
 	<h3 class="margin-bottom weight" align="center">Embroidery flower bud lace flower applique<sup class="badge">$:13.99</sup></h3>
         <time>2024-06-10</time>
-		<p>S/N: A13</p> 
-		<p><a class="padding block" href="https://www.paypal.com/ncp/payment/66VQAQ864YKHC" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Embroidery flower bud lace flower applique" /> Buy Now <span class="text-danger">&#36;</span>:13.99</sup></a><img src="https://c.zalalaa.com/q/a.webp" alt="Embroidery flower bud lace flower applique"/></p>
+	<div class="grid">S/N: A13 <a class="padding block" href="https://www.paypal.com/ncp/payment/66VQAQ864YKHC" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Embroidery flower bud lace flower applique" /> Buy Now <span class="text-danger">&#36;</span>:13.99</sup></a>
+    </div>
   <p>Embroidery flower bud lace flower applique <br/></p><p>size: 30cm * 25cm</p><p>gum : None, sewing is required</p><p>color :&nbsp;This white</p><p>materail :&nbsp;polyester yarn</p><p><br/></p>
   </div> 
   </div>
@@ -153,7 +153,7 @@
       </div>
     </div>
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
- <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p> 
+ <p class="size-small text-gray flex-grow">Copyright &copy; 2024 Zalalaa.Com <a href="/q/contact/index.html">Contact</a>  <a href="/q/38.html">Privacy Policy</a></p> 
 </div>
 </body>
 </html>
