--- a/q/15.html
+++ b/q/15.html
@@ -69,9 +69,9 @@
     <div class="big-x8">
 	<h3 class="margin-bottom weight" align="center">Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery<sup class="badge">$:12.99</sup></h3>
         <time>2024-06-30</time>
-		<p>S/N: A15</p> 
-		<p><a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery" /> Buy Now <span class="text-danger">&#36;</span>:12.99</sup></a><img src="https://c.zalalaa.com/q/a.webp" alt="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery"/></p>
-  <p>Embroidered water-soluble lace fabric, hand sewn cheongsam, heavy industry subsidy, ethnic peony flowers in stock supply.</p>
+	<div class="grid">S/N: A15 <a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery" /> Buy Now <span class="text-danger">&#36;</span>:12.99</sup></a>
+    </div>
+  
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
@@ -170,7 +170,7 @@
       </div>
     </div>
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
- <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p> 
+ <p class="size-small text-gray flex-grow">Copyright &copy; 2024 Zalalaa.Com <a href="/q/contact/index.html">Contact</a>  <a href="/q/38.html">Privacy Policy</a></p> 
 </div>
 </body>
 </html>
