--- a/q/18.html
+++ b/q/18.html
@@ -69,15 +69,9 @@
     <div class="big-x8">
 	<h3 class="margin-bottom weight" align="center">Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing<sup class="badge">$:12.99</sup></h3>
         <time>2024-06-10</time>
-		<p>S/N: A18</p> 
-		<p><a class="padding block" href="https://www.paypal.com/ncp/payment/EF2BB6JFC32LN" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing" /> Buy Now <span class="text-danger">&#36;</span>:12.99</sup></a><img src="https://c.zalalaa.com/q/a.webp" alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing"/></p>
-  <p>It will make your clothes look beautiful and unique, if you sewing the flowers embroidery lace neckline collar appliques on the clothes
-
-Material: polyester/fabric; Color: Pink&amp;wine red and brown; Only use of sewing(have no glue on back, do not iron on)
-
-Size: Approx.full 18cm width x 43cm length. (Due to the handmade sewing,size may vary one to another approx 0.3~0.5cm)
-
-Package Included: 1X 1 piece lace patches&nbsp;</p><p>&nbsp;This product will come with a true lifetime warranty that is good for one free replacement</p>
+	<div class="grid">S/N: A18 <a class="padding block" href="https://www.paypal.com/ncp/payment/EF2BB6JFC32LN" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing" /> Buy Now <span class="text-danger">&#36;</span>:12.99</sup></a>
+    </div>
+  <p>It will make your clothes look beautiful and unique, if you sewing the flowers embroidery lace neckline collar appliques on the clothes Material: polyester/fabric; Color: Pink&amp;wine red and brown; Only use of sewing(have no glue on back, do not iron on) Size: Approx.full 18cm width x 43cm length. (Due to the handmade sewing,size may vary one to another approx 0.3~0.5cm) Package Included: 1X 1 piece lace patches&nbsp;</p><p>&nbsp;This product will come with a true lifetime warranty that is good for one free replacement</p><p><br/></p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
@@ -138,7 +132,7 @@ Package Included: 1X 1 piece lace patches&nbsp;</p><p>&nbsp;This product will co
       </div>
     </div>
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
- <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p> 
+ <p class="size-small text-gray flex-grow">Copyright &copy; 2024 Zalalaa.Com <a href="/q/contact/index.html">Contact</a>  <a href="/q/38.html">Privacy Policy</a></p> 
 </div>
 </body>
 </html>
