--- a/q/20.html
+++ b/q/20.html
@@ -69,9 +69,9 @@
     <div class="big-x8">
 	<h3 class="margin-bottom weight" align="center">Skull cloth patch<sup class="badge">$:12</sup></h3>
         <time>2024-06-10</time>
-		<p>S/N: A20</p> 
-		<p><a class="padding block" href="https://www.paypal.com/ncp/payment/U6MSC4MNYSYUG" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Skull cloth patch" /> Buy Now <span class="text-danger">&#36;</span>:12</sup></a><img src="https://c.zalalaa.com/q/a.webp" alt="Skull cloth patch"/></p>
-  <p>Your clothes can be so gorgeous &nbsp; <br/></p>
+	<div class="grid">S/N: A20 <a class="padding block" href="https://www.paypal.com/ncp/payment/U6MSC4MNYSYUG" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Skull cloth patch" /> Buy Now <span class="text-danger">&#36;</span>:12</sup></a>
+    </div>
+  <p>Your clothes can be so gorgeous<br/></p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
@@ -139,7 +139,7 @@
       </div>
     </div>
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
- <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p> 
+ <p class="size-small text-gray flex-grow">Copyright &copy; 2024 Zalalaa.Com <a href="/q/contact/index.html">Contact</a>  <a href="/q/38.html">Privacy Policy</a></p> 
 </div>
 </body>
 </html>
