--- a/q/21.html
+++ b/q/21.html
@@ -69,9 +69,9 @@
     <div class="big-x8">
 	<h3 class="margin-bottom weight" align="center">Tiger head Embroiderye sticker<sup class="badge">$:12</sup></h3>
         <time>2024-06-02</time>
-		<p>S/N: A21</p> 
-		<p><a class="padding block" href="https://www.paypal.com/ncp/payment/6VZM27GTQTRNJ" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Tiger head Embroiderye sticker" /> Buy Now <span class="text-danger">&#36;</span>:12</sup></a><img src="https://c.zalalaa.com/q/a.webp" alt="Tiger head Embroiderye sticker"/></p>
-  <p>Tiger head embroidery sticker &nbsp;<br/></p>
+	<div class="grid">S/N: A21 <a class="padding block" href="https://www.paypal.com/ncp/payment/6VZM27GTQTRNJ" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Tiger head Embroiderye sticker" /> Buy Now <span class="text-danger">&#36;</span>:12</sup></a>
+    </div>
+  <p>Tiger head embroidery sticker<br/></p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
@@ -122,7 +122,7 @@
       </div>
     </div>
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
- <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p> 
+ <p class="size-small text-gray flex-grow">Copyright &copy; 2024 Zalalaa.Com <a href="/q/contact/index.html">Contact</a>  <a href="/q/38.html">Privacy Policy</a></p> 
 </div>
 </body>
 </html>
