--- a/q/22.html
+++ b/q/22.html
@@ -69,8 +69,8 @@
     <div class="big-x8">
 	<h3 class="margin-bottom weight" align="center">Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set<sup class="badge">$:12</sup></h3>
         <time>2024-06-02</time>
-		<p>S/N: A22</p> 
-		<p><a class="padding block" href="https://www.paypal.com/ncp/payment/MN4DKKMPP27A6" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set" /> Buy Now <span class="text-danger">&#36;</span>:12</sup></a><img src="https://c.zalalaa.com/q/a.webp" alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set"/></p>
+	<div class="grid">S/N: A22 <a class="padding block" href="https://www.paypal.com/ncp/payment/MN4DKKMPP27A6" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set" /> Buy Now <span class="text-danger">&#36;</span>:12</sup></a>
+    </div>
   <p>Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set</p>
   </div> 
   </div>
@@ -188,7 +188,7 @@
       </div>
     </div>
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
- <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p> 
+ <p class="size-small text-gray flex-grow">Copyright &copy; 2024 Zalalaa.Com <a href="/q/contact/index.html">Contact</a>  <a href="/q/38.html">Privacy Policy</a></p> 
 </div>
 </body>
 </html>
