--- a/q/25.html
+++ b/q/25.html
@@ -12,7 +12,7 @@
 <meta property="og:release_date" content="2024-07-05 17:55:53"/>
 <meta property="og:title" content="Cute cartoon puppy embroidered fabric patch for down jacket"/>
 <meta property="og:description" content="Cute cartoon puppy embroidered fabric patch for down jacket"/>
-<meta property="og:product:price" content="29.99"/>
+<meta property="og:product:price" content="39.99"/>
 <link rel="stylesheet" href="https://c.zalalaa.com/q/p.min.css">
 <link rel="stylesheet" href="https://c.zalalaa.com/q/p.css">
 <script src="https://c.zalalaa.com/q/j.min.js"></script>
@@ -67,11 +67,11 @@
 	 
     </div>
     <div class="big-x8">
-	<h3 class="margin-bottom weight" align="center">Cute cartoon puppy embroidered fabric patch for down jacket<sup class="badge">$:29.99</sup></h3>
+	<h3 class="margin-bottom weight" align="center">Cute cartoon puppy embroidered fabric patch for down jacket<sup class="badge">$:39.99</sup></h3>
         <time>2024-07-05</time>
-		<p>S/N: A25</p> 
-		<p><a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Cute cartoon puppy embroidered fabric patch for down jacket" /> Buy Now <span class="text-danger">&#36;</span>:29.99</sup></a><img src="https://c.zalalaa.com/q/a.webp" alt="Cute cartoon puppy embroidered fabric patch for down jacket"/></p>
-  <p>Cute cartoon puppy embroidered fabric patch for down jacket</p><p><br/></p><p>Hot melt adhesive for cloth pasting</p><p><span style="text-wrap: nowrap;"><br/></span></p><p><span style="text-wrap: nowrap;">Complete set (17 styles in total) $:19.99</span></p><p><br/></p>
+	<div class="grid">S/N: A25 <a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Cute cartoon puppy embroidered fabric patch for down jacket" /> Buy Now <span class="text-danger">&#36;</span>:39.99</sup></a>
+    </div>
+  <p>Cute cartoon puppy embroidered fabric patch for down jacket</p><p>Hot melt adhesive for cloth pasting</p><p>Complete set (17 styles in total) $:39.99</p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
@@ -137,7 +137,7 @@
       </div>
     </div>
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
- <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p> 
+ <p class="size-small text-gray flex-grow">Copyright &copy; 2024 Zalalaa.Com <a href="/q/contact/index.html">Contact</a>  <a href="/q/38.html">Privacy Policy</a></p> 
 </div>
 </body>
 </html>
