--- a/q/26.html
+++ b/q/26.html
@@ -69,9 +69,9 @@
     <div class="big-x8">
 	<h3 class="margin-bottom weight" align="center">New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch<sup class="badge">$:19.99</sup></h3>
         <time>2024-07-05</time>
-		<p>S/N: A26</p> 
-		<p><a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch" /> Buy Now <span class="text-danger">&#36;</span>:19.99</sup></a><img src="https://c.zalalaa.com/q/a.webp" alt="New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch"/></p>
-  <p>New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch</p><p><span style="color: rgb(51, 51, 51); font-family: -apple-system, BlinkMacSystemFont, &quot;PingFang SC&quot;, &quot;Microsoft YaHei&quot;, simsun, &quot;Segoe UI&quot;, Roboto, &quot;Helvetica Neue&quot;, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;; font-size: 18px; font-variant-ligatures: no-common-ligatures; background-color: rgb(255, 255, 255);">Complete set (6 styles in total) $:19.99</span></p><p></p>
+	<div class="grid">S/N: A26 <a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch" /> Buy Now <span class="text-danger">&#36;</span>:19.99</sup></a>
+    </div>
+  <p>New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch</p><p>Complete set (6 styles in total) $:19.99</p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
@@ -122,7 +122,7 @@
       </div>
     </div>
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
- <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p> 
+ <p class="size-small text-gray flex-grow">Copyright &copy; 2024 Zalalaa.Com <a href="/q/contact/index.html">Contact</a>  <a href="/q/38.html">Privacy Policy</a></p> 
 </div>
 </body>
 </html>
