--- a/q/27.html
+++ b/q/27.html
@@ -12,7 +12,7 @@
 <meta property="og:release_date" content="2024-07-06 08:35:35"/>
 <meta property="og:title" content="Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers"/>
 <meta property="og:description" content="Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickersAnimal Avatar Series (11 in total) $19.99"/>
-<meta property="og:product:price" content="19.99"/>
+<meta property="og:product:price" content="29.99"/>
 <link rel="stylesheet" href="https://c.zalalaa.com/q/p.min.css">
 <link rel="stylesheet" href="https://c.zalalaa.com/q/p.css">
 <script src="https://c.zalalaa.com/q/j.min.js"></script>
@@ -67,11 +67,11 @@
 	 
     </div>
     <div class="big-x8">
-	<h3 class="margin-bottom weight" align="center">Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers<sup class="badge">$:19.99</sup></h3>
+	<h3 class="margin-bottom weight" align="center">Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers<sup class="badge">$:29.99</sup></h3>
         <time>2024-07-06</time>
-		<p>S/N: A27</p> 
-		<p><a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers" /> Buy Now <span class="text-danger">&#36;</span>:19.99</sup></a><img src="https://c.zalalaa.com/q/a.webp" alt="Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers"/></p>
-  <p>Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers</p><p><br/></p><p>Animal Avatar Series (11 in total) $19.99</p><p>Size in cm</p><p></p><p></p>
+	<div class="grid">S/N: A27 <a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers" /> Buy Now <span class="text-danger">&#36;</span>:29.99</sup></a>
+    </div>
+  <p>Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers</p><p>Animal Avatar Series (11 in total) $29.99</p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
@@ -123,7 +123,7 @@
       </div>
     </div>
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
- <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p> 
+ <p class="size-small text-gray flex-grow">Copyright &copy; 2024 Zalalaa.Com <a href="/q/contact/index.html">Contact</a>  <a href="/q/38.html">Privacy Policy</a></p> 
 </div>
 </body>
 </html>
