--- a/q/31.html
+++ b/q/31.html
@@ -69,9 +69,9 @@
     <div class="big-x8">
 	<h3 class="margin-bottom weight" align="center">Cute cartoon cat<sup class="badge">$:9.99</sup></h3>
         <time>2024-07-06</time>
-		<p>S/N: A31</p> 
-		<p><a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Cute cartoon cat" /> Buy Now <span class="text-danger">&#36;</span>:9.99</sup></a><img src="https://c.zalalaa.com/q/a.webp" alt="Cute cartoon cat"/></p>
-  <p>Cute cartoon cat embroidered badge, clothing decoration patch, down jacket patch, cloth patch</p><p>Complete set (4 styles in total) $:9.99 &nbsp;<br/></p>
+	<div class="grid">S/N: A31 <a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Cute cartoon cat" /> Buy Now <span class="text-danger">&#36;</span>:9.99</sup></a>
+    </div>
+  
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
@@ -123,7 +123,7 @@
       </div>
     </div>
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
- <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p> 
+ <p class="size-small text-gray flex-grow">Copyright &copy; 2024 Zalalaa.Com <a href="/q/contact/index.html">Contact</a>  <a href="/q/38.html">Privacy Policy</a></p> 
 </div>
 </body>
 </html>
