--- a/q/33.html
+++ b/q/33.html
@@ -69,9 +69,9 @@
     <div class="big-x8">
 	<h3 class="margin-bottom weight" align="center">Cartoon animal embroidery<sup class="badge">$:29.99</sup></h3>
         <time>2024-07-06</time>
-		<p>S/N: A33</p> 
-		<p><a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Cartoon animal embroidery" /> Buy Now <span class="text-danger">&#36;</span>:29.99</sup></a><img src="https://c.zalalaa.com/q/a.webp" alt="Cartoon animal embroidery"/></p>
-  <p>Cartoon animal embroidery fabric patch cute bag decoration clothing patch embroidered fabric patch</p><p><br/></p><p>Complete set (10 styles in total) $:29.99 &nbsp; &nbsp;</p>
+	<div class="grid">S/N: A33 <a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Cartoon animal embroidery" /> Buy Now <span class="text-danger">&#36;</span>:29.99</sup></a>
+    </div>
+  <p>Cartoon animal embroidery fabric patch cute bag decoration clothing patch embroidery patch clothing accessories wholesale <br/></p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
@@ -179,7 +179,7 @@
       </div>
     </div>
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
- <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p> 
+ <p class="size-small text-gray flex-grow">Copyright &copy; 2024 Zalalaa.Com <a href="/q/contact/index.html">Contact</a>  <a href="/q/38.html">Privacy Policy</a></p> 
 </div>
 </body>
 </html>
