--- a/q/38.html
+++ b/q/38.html
@@ -5,10 +5,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="renderer" content="webkit">
-<title>Order dynamics-Arts, Crafts &amp; Sewing-zlalaa</title>
+<title>Privacy Policy-Blog-Arts, Crafts &amp; Sewing-zlalaa</title>
 <meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
-<meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
+<meta name="description" content="Privacy PolicyThis privacy policy covers zalalaa.com and its associated mirrors.EmailWe will not give away your email address to anyone, who is not related to the operations of zalalaa.com. We will also never ask you to send us any of your passwords via email.LogfilesMost mirrors maintain standard l">
 <meta name="theme-color" content="#32CD32">
+<meta property="og:type" content="article"/>
+<meta property="og:release_date" content="2024-07-07 15:27:34"/>
 <link rel="stylesheet" href="https://c.zalalaa.com/q/p.min.css">
 <link rel="stylesheet" href="https://c.zalalaa.com/q/p.css">
 <script src="https://c.zalalaa.com/q/j.min.js"></script>
@@ -39,31 +41,23 @@
 </script>
 <br />
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
-    <div class="grid">
-       <div class="big-x2 small-x6"><a href="/q/order/index.html" title="Order dynamics">Order dynamics <span class="badge">0</span></a></div> 
-    </div>
-</div>  
-<div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
-  <h1 class="margin-bottom-mini weight" align="center">Order dynamics</h1>
-  <p align="center"></p>
+  <h1 class="margin-bottom weight" align="center">Privacy Policy</h1>
+  <p align="center"><time>2024-07-07</time></p>
+   <ul class="bread">
+     <a href="/index.html"><i class="icon-home"></i></a> <i class="icon-arrow-right"></i><a href="/q/article/index.html">Blog</a> <i class="icon-arrow-right"></i> <a href="/q/38.html">Privacy Policy</a>
+     </ul> 
+    <div class="grid big-grid-middle large-grid-large isplit-content">
+    <div class="big"> 
+  <h1>Privacy Policy</h1><p>This privacy policy covers zalalaa.com and its associated mirrors.</p><h2>Email</h2><p>We will not give away your email address to anyone, who is not related to the operations of zalalaa.com. We will also never ask you to send us any of your passwords via email.</p><h2>Logfiles</h2><p>Most mirrors maintain standard logs of the requests that reach the web servers, but we do only use those files for statistical purposes.</p><p>And to improve your search experience, we store anonymised search terms that are submitted to the site.</p><h2>Cookies</h2><p>zalalaa.com uses cookies to keep track of&nbsp;user preferences. Unless you login on the site, the cookies will not be used to store personal information and we do not give away the information from the cookies.</p><p><br/></p>
+  </div> 
+  </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
-
     <div class="big-x12 grid discovers">
     </div>
   </div>
+<p>Previous：<a href="javascript:;"> </a></p>
+<p>Next：<a href="javascript:;"> </a></p>
 </div>
-
-<div class="layout grid-large isplit scrollto">
-  <div class="grid documents">
-  </div>
-</div>
-
-    <ul class="nav nav-page nav-divider">
-      <li><a href="javascript:;index.html">Previous page</a></li>
-      <li><a href="javascript:;index.html">Next page</a></li>
-    </ul>
-  
-
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
  <p class="size-small text-gray flex-grow">Copyright &copy; 2024 Zalalaa.Com <a href="/q/contact/index.html">Contact</a>  <a href="/q/38.html">Privacy Policy</a></p> 
 </div>
