--- a/q/4.html
+++ b/q/4.html
@@ -69,9 +69,9 @@
     <div class="big-x8">
 	<h3 class="margin-bottom weight" align="center">Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers<sup class="badge">$:12.99</sup></h3>
         <time>2024-07-01</time>
-		<p>S/N: A4</p> 
-		<p><a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers" /> Buy Now <span class="text-danger">&#36;</span>:12.99</sup></a><img src="https://c.zalalaa.com/q/a.webp" alt="Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers"/></p>
-  <p>Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers</p><p><br/></p><p>The bottom layer is made of fiberglass hot melt, and the three-dimensional petals are placed on a water soluble flower cart. There are a total of four layers of petals.</p>
+	<div class="grid">S/N: A4 <a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers" /> Buy Now <span class="text-danger">&#36;</span>:12.99</sup></a>
+    </div>
+  <p>Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers</p><p>The bottom layer is made of fiberglass hot melt, and the three-dimensional petals are placed on a water soluble flower cart. There are a total of four layers of petals.</p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
@@ -242,7 +242,7 @@
       </div>
     </div>
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
- <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p> 
+ <p class="size-small text-gray flex-grow">Copyright &copy; 2024 Zalalaa.Com <a href="/q/contact/index.html">Contact</a>  <a href="/q/38.html">Privacy Policy</a></p> 
 </div>
 </body>
 </html>
