--- a/q/flower/index.html
+++ b/q/flower/index.html
@@ -40,13 +40,21 @@
 <br />
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
     <div class="grid">
-       <div class="big-x2 small-x6"><a href="/q/animal/index.html" title="Animal">Animal <span class="badge">11</span></a></div> <div class="big-x2 small-x6"><a href="/q/flower/index.html" title="Flower">Flower <span class="badge">15</span></a></div> 
+       <div class="big-x2 small-x6"><a href="/q/hot/index.html" title="Hot sales">Hot sales <span class="badge">5</span></a></div> <div class="big-x2 small-x6"><a href="/q/animal/index.html" title="Animal">Animal <span class="badge">14</span></a></div> <div class="big-x2 small-x6"><a href="/q/flower/index.html" title="Flower">Flower <span class="badge">16</span></a></div> 
     </div>
 </div>
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
   <h3 class="margin-bottom-mini weight" align="center">Flower</h3>
   <div class="grid big-grid-middle large-grid-large isplit-content">
     <div class="big-x12 grid discovers">
+      <a class="big-x3 flex flex-column" href="/q/36.html" title="Daisy embroidered fabric patch cute self-adhesive sticker DIY bag decoration clothing patch patch patch,2024-07-07 12:18:25">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/u/upload/other/20240707/1720334898412630.webp"  alt="Daisy embroidered fabric patch cute self-adhesive sticker DIY bag decoration clothing patch patch patch" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small">S/N: A36 <span class="text-danger">&#36;</span>:9.99</strong>
+        <p class="size-small flex-grow">Embroidered small daisies, embroidered fabric stickers, cute···</p>
+      </a>
       <a class="big-x3 flex flex-column" href="/q/24.html" title="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers,2024-07-01 17:53:32">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/q/upload/other/20240701/1719827829205743.webp"  alt="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers" class="img-auto scale" /> </figure>
@@ -93,7 +101,7 @@
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small">S/N: A16 <span class="text-danger">&#36;</span>:12.99</strong>
-        <p class="size-small flex-grow">Embroidered lace cover, floral cloth patch, large peony embr···</p>
+        <p class="size-small flex-grow"></p>
       </a>
       <a class="big-x3 flex flex-column" href="/q/15.html" title="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2024-06-30 08:38:13">
         <div class="overflow-hidden margin-bottom relative effect-hover">
@@ -101,7 +109,7 @@
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small">S/N: A15 <span class="text-danger">&#36;</span>:12.99</strong>
-        <p class="size-small flex-grow">Embroidered water-soluble lace fabric, hand sewn cheongsam, ···</p>
+        <p class="size-small flex-grow"></p>
       </a>
       <a class="big-x3 flex flex-column" href="/q/14.html" title="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder,2024-07-01 11:47:46">
         <div class="overflow-hidden margin-bottom relative effect-hover">
@@ -141,7 +149,7 @@
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small">S/N: A9 <span class="text-danger">&#36;</span>:9.99</strong>
-        <p class="size-small flex-grow">Embroidered lace colored fabric with ethnic denim fabric pat···</p>
+        <p class="size-small flex-grow"></p>
       </a>
       <a class="big-x3 flex flex-column" href="/q/8.html" title="Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers,2024-07-01 15:18:27">
         <div class="overflow-hidden margin-bottom relative effect-hover">
@@ -177,7 +185,7 @@
 </div>
 
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
- <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p> 
+ <p class="size-small text-gray flex-grow">Copyright &copy; 2024 Zalalaa.Com <a href="/q/contact/index.html">Contact</a>  <a href="/q/38.html">Privacy Policy</a></p> 
 </div>
 </body>
 </html>
