--- a/q/10.html
+++ b/q/10.html
@@ -69,8 +69,8 @@
     <div class="big-x8">
 	<h3 class="margin-bottom weight" align="center">Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories<sup class="badge">$:12.99</sup></h3>
         <time>2024-07-01</time>
-		<p>S/N: A10</p> 
-		<p><a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories" /> Buy Now <span class="text-danger">&#36;</span>:12.99</sup></a><img src="https://c.zalalaa.com/q/a.webp" alt="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories"/></p>
+	<div class="grid">S/N: A10 <a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories" /> Buy Now <span class="text-danger">&#36;</span>:12.99</sup></a>
+    </div>
   <p>Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories</p>
   </div> 
   </div>
@@ -177,7 +177,7 @@
       </div>
     </div>
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
- <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p> 
+ <p class="size-small text-gray flex-grow">Copyright &copy; 2024 Zalalaa.Com <a href="/q/contact/index.html">Contact</a>  <a href="/q/38.html">Privacy Policy</a></p> 
 </div>
 </body>
 </html>
