--- a/q/23.html
+++ b/q/23.html
@@ -69,8 +69,8 @@
     <div class="big-x8">
 	<h3 class="margin-bottom weight" align="center">New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend<sup class="badge">$:29.99</sup></h3>
         <time>2024-07-01</time>
-		<p>S/N: A23</p> 
-		<p><a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend" /> Buy Now <span class="text-danger">&#36;</span>:29.99</sup></a><img src="https://c.zalalaa.com/q/a.webp" alt="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend"/></p>
+	<div class="grid">S/N: A23 <a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend" /> Buy Now <span class="text-danger">&#36;</span>:29.99</sup></a>
+    </div>
   <p>New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend</p>
   </div> 
   </div>
@@ -172,7 +172,7 @@
       </div>
     </div>
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
- <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p> 
+ <p class="size-small text-gray flex-grow">Copyright &copy; 2024 Zalalaa.Com <a href="/q/contact/index.html">Contact</a>  <a href="/q/38.html">Privacy Policy</a></p> 
 </div>
 </body>
 </html>
