--- a/q/24.html
+++ b/q/24.html
@@ -69,8 +69,8 @@
     <div class="big-x8">
 	<h3 class="margin-bottom weight" align="center">Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers<sup class="badge">$:9.99</sup></h3>
         <time>2024-07-01</time>
-		<p>S/N: A24</p> 
-		<p><a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers" /> Buy Now <span class="text-danger">&#36;</span>:9.99</sup></a><img src="https://c.zalalaa.com/q/a.webp" alt="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers"/></p>
+	<div class="grid">S/N: A24 <a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers" /> Buy Now <span class="text-danger">&#36;</span>:9.99</sup></a>
+    </div>
   <p>Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers<br/></p><p><br/></p><p>Size: 38cmX20cm</p><p><br/></p><p><br/></p><p>Complete set (8 styles in total) $49.99</p><p class="big-x6 flex flex-column"><img src="/q/upload/other/20240702/1719913920752310.webp"/></p><p><br/></p><p><br/></p><p><br/></p><p>Complete set (10 styles in total) $59.99</p><p class="big-x6 flex flex-column"><img src="/q/upload/other/20240702/1719913920881701.webp"/></p><p><br/></p>
   </div> 
   </div>
@@ -277,7 +277,7 @@
       </div>
     </div>
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
- <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p> 
+ <p class="size-small text-gray flex-grow">Copyright &copy; 2024 Zalalaa.Com <a href="/q/contact/index.html">Contact</a>  <a href="/q/38.html">Privacy Policy</a></p> 
 </div>
 </body>
 </html>
