--- a/q/29.html
+++ b/q/29.html
@@ -12,7 +12,7 @@
 <meta property="og:release_date" content="2024-07-06 14:32:13"/>
 <meta property="og:title" content="Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch"/>
 <meta property="og:description" content="Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth PatchComplete set (15 styles in total) $:19.99"/>
-<meta property="og:product:price" content="19.99"/>
+<meta property="og:product:price" content="29.99"/>
 <link rel="stylesheet" href="https://c.zalalaa.com/q/p.min.css">
 <link rel="stylesheet" href="https://c.zalalaa.com/q/p.css">
 <script src="https://c.zalalaa.com/q/j.min.js"></script>
@@ -67,11 +67,11 @@
 	 
     </div>
     <div class="big-x8">
-	<h3 class="margin-bottom weight" align="center">Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch<sup class="badge">$:19.99</sup></h3>
+	<h3 class="margin-bottom weight" align="center">Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch<sup class="badge">$:29.99</sup></h3>
         <time>2024-07-06</time>
-		<p>S/N: A29</p> 
-		<p><a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch" /> Buy Now <span class="text-danger">&#36;</span>:19.99</sup></a><img src="https://c.zalalaa.com/q/a.webp" alt="Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch"/></p>
-  <p>Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch</p><p>Complete set (15 styles in total) $:19.99</p>
+	<div class="grid">S/N: A29 <a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch" /> Buy Now <span class="text-danger">&#36;</span>:29.99</sup></a>
+    </div>
+  <p>Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch</p><p>Complete set (15 styles in total) $:29.99</p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
@@ -116,7 +116,7 @@
       </div>
     </div>
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
- <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p> 
+ <p class="size-small text-gray flex-grow">Copyright &copy; 2024 Zalalaa.Com <a href="/q/contact/index.html">Contact</a>  <a href="/q/38.html">Privacy Policy</a></p> 
 </div>
 </body>
 </html>
