--- a/q/30.html
+++ b/q/30.html
@@ -69,8 +69,8 @@
     <div class="big-x8">
 	<h3 class="margin-bottom weight" align="center">Cartoon Panda Cute Embroidered Cloth Sticker<sup class="badge">$:9.99</sup></h3>
         <time>2024-07-06</time>
-		<p>S/N: A30</p> 
-		<p><a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Cartoon Panda Cute Embroidered Cloth Sticker" /> Buy Now <span class="text-danger">&#36;</span>:9.99</sup></a><img src="https://c.zalalaa.com/q/a.webp" alt="Cartoon Panda Cute Embroidered Cloth Sticker"/></p>
+	<div class="grid">S/N: A30 <a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Cartoon Panda Cute Embroidered Cloth Sticker" /> Buy Now <span class="text-danger">&#36;</span>:9.99</sup></a>
+    </div>
   <p>Cartoon Panda Cute Embroidered Cloth Sticker</p><p>Computer Embroidery Seal DIY Bag Decoration Cloth Patch Patch</p><p>Complete set (6 styles in total) $:9.99&nbsp;<br/></p>
   </div> 
   </div>
@@ -123,7 +123,7 @@
       </div>
     </div>
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
- <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p> 
+ <p class="size-small text-gray flex-grow">Copyright &copy; 2024 Zalalaa.Com <a href="/q/contact/index.html">Contact</a>  <a href="/q/38.html">Privacy Policy</a></p> 
 </div>
 </body>
 </html>
