--- a/q/32.html
+++ b/q/32.html
@@ -69,10 +69,9 @@
     <div class="big-x8">
 	<h3 class="margin-bottom weight" align="center">Cartoon flower butterfly embroidered fabric patch<sup class="badge">$:29.99</sup></h3>
         <time>2024-07-06</time>
-		<p>S/N: A32</p> 
-		<p><a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Cartoon flower butterfly embroidered fabric patch" /> Buy Now <span class="text-danger">&#36;</span>:29.99</sup></a><img src="https://c.zalalaa.com/q/a.webp" alt="Cartoon flower butterfly embroidered fabric patch"/></p>
-  <p>Embroidered badges, cartoons, flowers, butterflies, embroidered fabrics, DIY bags, decorative stickers, clothing patches, wholesale stickers<br/></p><p><br/></p><p>Complete set (13 styles in total) $:29.99 
- &nbsp; &nbsp;<br/></p><p><br/></p>
+	<div class="grid">S/N: A32 <a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Cartoon flower butterfly embroidered fabric patch" /> Buy Now <span class="text-danger">&#36;</span>:29.99</sup></a>
+    </div>
+  <p>Embroidered badges, cartoons, flowers, butterflies, embroidered fabrics, DIY bags, decorative stickers, clothing patches, wholesale stickers</p><p>Complete set (13 styles in total) $:29.99</p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
@@ -194,7 +193,7 @@
       </div>
     </div>
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
- <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p> 
+ <p class="size-small text-gray flex-grow">Copyright &copy; 2024 Zalalaa.Com <a href="/q/contact/index.html">Contact</a>  <a href="/q/38.html">Privacy Policy</a></p> 
 </div>
 </body>
 </html>
