--- a/q/36.html
+++ b/q/36.html
@@ -5,14 +5,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="renderer" content="webkit">
-<title>Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="description" content="Embroidered lace cover, floral cloth patch, large peony embroidered water soluble set">
+<title>Daisy embroidered fabric patch cute self-adhesive sticker DIY bag decoration clothing patch patch patch-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
+<meta name="description" content="Embroidered small daisies, embroidered fabric stickers, cute self-adhesive stickers, DIY bags, decorative clothes, patch stickers wholesale">
 <meta name="theme-color" content="#32CD32">
 <meta property="og:type" content="product"/>
-<meta property="og:release_date" content="2024-07-01 08:43:13"/>
-<meta property="og:title" content="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set"/>
-<meta property="og:description" content="Embroidered lace cover, floral cloth patch, large peony embroidered water soluble set"/>
-<meta property="og:product:price" content="12.99"/>
+<meta property="og:release_date" content="2024-07-07 12:18:25"/>
+<meta property="og:title" content="Daisy embroidered fabric patch cute self-adhesive sticker DIY bag decoration clothing patch patch patch"/>
+<meta property="og:description" content="Embroidered small daisies, embroidered fabric stickers, cute self-adhesive stickers, DIY bags, decorative clothes, patch stickers wholesale"/>
+<meta property="og:product:price" content="9.99"/>
 <link rel="stylesheet" href="https://c.zalalaa.com/q/p.min.css">
 <link rel="stylesheet" href="https://c.zalalaa.com/q/p.css">
 <script src="https://c.zalalaa.com/q/j.min.js"></script>
@@ -43,7 +43,7 @@
 </script>
 <br />
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
-  <h1 class="margin-bottom weight" align="center">Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set</h1>
+  <h1 class="margin-bottom weight" align="center">Daisy embroidered fabric patch cute self-adhesive sticker DIY bag decoration clothing patch patch patch</h1>
   <p align="center"></p>
     <p align="center"><span class="text-danger size-large">&#9733;</span>
     <span class="text-danger size-large">&#9733;</span>
@@ -51,49 +51,49 @@
     <span class="text-danger size-large">&#9733;</span>
     <span class="text-danger size-large">&#9733;</span></p>
   <ul class="bread">
-    <a href="/index.html"><i class="icon-home"></i></a> <i class="icon-arrow-right"></i> <a href="/q/patches/index.html">Applique Patches</a> <i class="icon-arrow-right"></i> <a href="/q/flower/index.html">Flower</a> <i class="icon-arrow-right"></i> <a href="/q/16.html">Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set</a>
+    <a href="/index.html"><i class="icon-home"></i></a> <i class="icon-arrow-right"></i> <a href="/q/patches/index.html">Applique Patches</a> <i class="icon-arrow-right"></i> <a href="/q/flower/index.html">Flower</a> <i class="icon-arrow-right"></i> <a href="/q/36.html">Daisy embroidered fabric patch cute self-adhesive sticker DIY bag decoration clothing patch patch patch</a>
      </ul> 
     <div class="grid big-grid-middle large-grid-large isplit-content">
     <div class="big-x4">
       <a class="padding block text-white discovers-main" href=" ">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big">
-              <img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719794556332881.webp" alt="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set" class="img-auto scale" /></figure>
+              <img loading="lazy" src="https://c.zalalaa.com/u/upload/other/20240707/1720334898412630.webp" alt="Daisy embroidered fabric patch cute self-adhesive sticker DIY bag decoration clothing patch patch patch" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <strong class="weight-small">S/N: A16</strong>
+        <strong class="weight-small">S/N: A36</strong>
         <p class="size-small"></p>
       </a>
 	 
     </div>
     <div class="big-x8">
-	<h3 class="margin-bottom weight" align="center">Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set<sup class="badge">$:12.99</sup></h3>
-        <time>2024-07-01</time>
-	<div class="grid">S/N: A16 <a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set" /> Buy Now <span class="text-danger">&#36;</span>:12.99</sup></a>
+	<h3 class="margin-bottom weight" align="center">Daisy embroidered fabric patch cute self-adhesive sticker DIY bag decoration clothing patch patch patch<sup class="badge">$:9.99</sup></h3>
+        <time>2024-07-07</time>
+	<div class="grid">S/N: A36 <a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Daisy embroidered fabric patch cute self-adhesive sticker DIY bag decoration clothing patch patch patch" /> Buy Now <span class="text-danger">&#36;</span>:9.99</sup></a>
     </div>
-  
+  <p>Embroidered small daisies, embroidered fabric stickers, cute self-adhesive stickers, DIY bags, decorative clothes, patch stickers wholesale <br/></p><p>Complete set (5 styles in total) $:9.99</p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576394952389.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/u/upload/other/20240707/1720334903694726.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576394952389.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/u/upload/other/20240707/1720334903694726.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow"></p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576394952389.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/u/upload/other/20240707/1720334903285845.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576394952389.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/u/upload/other/20240707/1720334903285845.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow"></p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576399734438.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/u/upload/other/20240707/1720334903934318.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576399734438.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/u/upload/other/20240707/1720334903934318.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow"></p>
@@ -105,12 +105,6 @@
 </div>
     <div class="grid-middle">
       <div class="grid">
-        <div class="small-x2">
-          <div class="card">
-            <img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719794556332881.webp" class="card-media card-overflow" />
-            <div class="card-body"><a class="button bg-main" href="/q/16.html" title="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set,2024-07-01 08:43:13">Read More</a></div>
-          </div>
-        </div>
         
       </div>
     </div>
