--- a/q/9.html
+++ b/q/9.html
@@ -69,9 +69,9 @@
     <div class="big-x8">
 	<h3 class="margin-bottom weight" align="center">Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product<sup class="badge">$:9.99</sup></h3>
         <time>2024-07-01</time>
-		<p>S/N: A9</p> 
-		<p><a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product" /> Buy Now <span class="text-danger">&#36;</span>:9.99</sup></a><img src="https://c.zalalaa.com/q/a.webp" alt="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product"/></p>
-  <p>Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product</p>
+	<div class="grid">S/N: A9 <a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product" /> Buy Now <span class="text-danger">&#36;</span>:9.99</sup></a>
+    </div>
+  
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
@@ -228,7 +228,7 @@
       </div>
     </div>
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
- <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p> 
+ <p class="size-small text-gray flex-grow">Copyright &copy; 2024 Zalalaa.Com <a href="/q/contact/index.html">Contact</a>  <a href="/q/38.html">Privacy Policy</a></p> 
 </div>
 </body>
 </html>
