--- a/q/animal/index.html
+++ b/q/animal/index.html
@@ -40,13 +40,37 @@
 <br />
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
     <div class="grid">
-       <div class="big-x2 small-x6"><a href="/q/animal/index.html" title="Animal">Animal <span class="badge">11</span></a></div> <div class="big-x2 small-x6"><a href="/q/flower/index.html" title="Flower">Flower <span class="badge">15</span></a></div> 
+       <div class="big-x2 small-x6"><a href="/q/hot/index.html" title="Hot sales">Hot sales <span class="badge">5</span></a></div> <div class="big-x2 small-x6"><a href="/q/animal/index.html" title="Animal">Animal <span class="badge">14</span></a></div> <div class="big-x2 small-x6"><a href="/q/flower/index.html" title="Flower">Flower <span class="badge">16</span></a></div> 
     </div>
 </div>
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
   <h3 class="margin-bottom-mini weight" align="center">Animal</h3>
   <div class="grid big-grid-middle large-grid-large isplit-content">
     <div class="big-x12 grid discovers">
+      <a class="big-x3 flex flex-column" href="/q/37.html" title="Cute little tiger embroidery patch,2024-07-07 14:48:59">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/u/upload/other/20240707/1720335273197985.webp"  alt="Cute little tiger embroidery patch" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small">S/N: A37 <span class="text-danger">&#36;</span>:29.99</strong>
+        <p class="size-small flex-grow">Cute Little Tiger Embroidery Patch DIY Phone Case Clothing A···</p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/35.html" title="Plush cartoon teddy bear cloth sticker,2024-07-07 11:36:51">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/u/upload/other/20240707/1720323888225453.webp"  alt="Plush cartoon teddy bear cloth sticker" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small">S/N: A35 <span class="text-danger">&#36;</span>:29.99</strong>
+        <p class="size-small flex-grow">Embroidered plush cartoon teddy bear cloth sticker with self···</p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/34.html" title="Ice cream cake embroidered cloth patch,2024-07-07 09:31:22">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/u/upload/other/20240707/1720322934325110.webp"  alt="Ice cream cake embroidered cloth patch" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small">S/N: A34 <span class="text-danger">&#36;</span>:29.99</strong>
+        <p class="size-small flex-grow">Ice cream cake embroidered fabric sticker self-adhesive clot···</p>
+      </a>
       <a class="big-x3 flex flex-column" href="/q/33.html" title="Cartoon animal embroidery,2024-07-06 17:29:47">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/q/upload/other/20240706/1720262794598324.webp"  alt="Cartoon animal embroidery" class="img-auto scale" /> </figure>
@@ -69,7 +93,7 @@
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small">S/N: A31 <span class="text-danger">&#36;</span>:9.99</strong>
-        <p class="size-small flex-grow">Cute cartoon cat embroidered badge, clothing decoration patc···</p>
+        <p class="size-small flex-grow"></p>
       </a>
       <a class="big-x3 flex flex-column" href="/q/30.html" title="Cartoon Panda Cute Embroidered Cloth Sticker,2024-07-06 14:59:58">
         <div class="overflow-hidden margin-bottom relative effect-hover">
@@ -84,7 +108,7 @@
           <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/q/upload/other/20240706/1720248862555502.webp"  alt="Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <strong class="weight-small">S/N: A29 <span class="text-danger">&#36;</span>:19.99</strong>
+        <strong class="weight-small">S/N: A29 <span class="text-danger">&#36;</span>:29.99</strong>
         <p class="size-small flex-grow">Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhes···</p>
       </a>
       <a class="big-x3 flex flex-column" href="/q/28.html" title="Cartoon Rabbit Astronaut,2024-07-06 09:42:46">
@@ -100,7 +124,7 @@
           <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/q/upload/other/20240706/1720226337562267.webp"  alt="Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <strong class="weight-small">S/N: A27 <span class="text-danger">&#36;</span>:19.99</strong>
+        <strong class="weight-small">S/N: A27 <span class="text-danger">&#36;</span>:29.99</strong>
         <p class="size-small flex-grow">Cartoon animal embroidery stickers, teddy bear cloth sticker···</p>
       </a>
       <a class="big-x3 flex flex-column" href="/q/26.html" title="New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch,2024-07-05 19:20:43">
@@ -116,7 +140,7 @@
           <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/q/upload/other/20240705/1720173688785484.webp"  alt="Cute cartoon puppy embroidered fabric patch for down jacket" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <strong class="weight-small">S/N: A25 <span class="text-danger">&#36;</span>:29.99</strong>
+        <strong class="weight-small">S/N: A25 <span class="text-danger">&#36;</span>:39.99</strong>
         <p class="size-small flex-grow">Cute cartoon puppy embroidered fabric patch for down jacketH···</p>
       </a>
       <a class="big-x3 flex flex-column" href="/q/21.html" title="Tiger head Embroiderye sticker,2024-06-02 18:42:38">
@@ -125,7 +149,7 @@
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small">S/N: A21 <span class="text-danger">&#36;</span>:12</strong>
-        <p class="size-small flex-grow">Tiger head embroidery sticker </p>
+        <p class="size-small flex-grow">Tiger head embroidery sticker</p>
       </a>
       <a class="big-x3 flex flex-column" href="/q/20.html" title="Skull cloth patch,2024-06-10 21:33:26">
         <div class="overflow-hidden margin-bottom relative effect-hover">
@@ -133,7 +157,7 @@
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small">S/N: A20 <span class="text-danger">&#36;</span>:12</strong>
-        <p class="size-small flex-grow">Your clothes can be so gorgeous </p>
+        <p class="size-small flex-grow">Your clothes can be so gorgeous</p>
       </a>
     </div>
   </div>
@@ -145,7 +169,7 @@
 </div>
 
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
- <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p> 
+ <p class="size-small text-gray flex-grow">Copyright &copy; 2024 Zalalaa.Com <a href="/q/contact/index.html">Contact</a>  <a href="/q/38.html">Privacy Policy</a></p> 
 </div>
 </body>
 </html>
