--- a/q/article/index.html
+++ b/q/article/index.html
@@ -49,20 +49,34 @@
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
+      <a class="big-x3 flex flex-column" href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/logo.webp"  alt="Privacy Policy" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small">Privacy Policy<sup>+</sup></strong>
+        <p class="flex-grow">Privacy PolicyThis privacy policy covers zalalaa.com and its assoc···<time>2024-07-07</time></p>
+      </a>
     </div>
   </div>
 </div>
 
 <div class="layout grid-large isplit scrollto">
   <div class="grid documents">
+    <a class="big-x4" href="/q/38.html" title="Privacy Policy,2024-07-07 15:27:34">
+      <strong>Privacy Policy<sup>2024-07-07</sup></strong>
+    </a>
   </div>
 </div>
 
-   	<div>No data found!</div>
+    <ul class="nav nav-page nav-divider">
+      <li><a href="javascript:;index.html">Previous page</a></li>
+      <li><a href="javascript:;index.html">Next page</a></li>
+    </ul>
   
 
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
- <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p> 
+ <p class="size-small text-gray flex-grow">Copyright &copy; 2024 Zalalaa.Com <a href="/q/contact/index.html">Contact</a>  <a href="/q/38.html">Privacy Policy</a></p> 
 </div>
 </body>
 </html>
